user verify, and get user API Done

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,5 @@
 SERVER_PORT = 8080
 DB_URL = mongodb+srv://api:api@cluster0.cc91xl2.mongodb.net/mernapi?retryWrites=true&w=majority
+
+# openssl rand -base64 32
+JWT_SECRET= URIIU1sJeCEKuFWNx1F/xhvyPIWjzEdFlBFtLRtyAnM=
